--- a/res/layout/questionary.xml
+++ b/res/layout/questionary.xml
@@ -8,7 +8,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:padding="10dp" >
 
         <TextView
             android:id="@+id/welcome_label"
@@ -25,48 +26,48 @@
             android:background="#80FFFFFF" />
 
         <TextView
-            android:id="@+id/question_0_label"
+            android:id="@+id/area_label"
             style="@style/questionLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/question_0_label" />
+            android:text="@string/area_label" />
 
         <Spinner
-            android:id="@+id/question_0_value"
+            android:id="@+id/area"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:prompt="@string/question_0_label" />
+            android:prompt="@string/area_label" />
 
         <TextView
-            android:id="@+id/question_1_label"
+            android:id="@+id/fun_label"
             style="@style/questionLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/question_1_label" />
+            android:text="@string/fun_label" />
 
         <RatingBar
-            android:id="@+id/question_1_value"
+            android:id="@+id/fun"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/question_2_label"
+            android:id="@+id/alcohol_label"
             style="@style/questionLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/question_2_label" />
+            android:text="@string/alcohol_label" />
 
         <TextView
-            android:id="@+id/question_2_hint"
+            android:id="@+id/alcohol_hint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <SeekBar
-            android:id="@+id/question_2_value"
+            android:id="@+id/alcohol"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:max="31" />
+            android:max="30" />
 
         <Button
             android:id="@+id/button1"
